# prompt-sentinel

./: .gitignore  README.md  pom.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
src/main/java/io/promptsentinel/filter/: FilterEngine.java  PromptRewriter.java  RiskScorer.java  Rule.java  RuleClassifier.java  RuleRegistry.java
src/main/java/io/promptsentinel/server/: PromptSentinelServer.java
src/main/java/io/promptsentinel/types/: Action.java  FilterResult.java  RiskLevel.java  RuleCategory.java  RuleMatch.java
src/main/resources/: rules.yaml
src/prompt_sentinel/: __init__.py  server.py  types.py
src/prompt_sentinel/filter/: __init__.py  engine.py  rewriter.py  rules.py  scorer.py
src/test/java/io/promptsentinel/filter/: FilterEngineTest.java  RiskScorerTest.java  RuleClassifierTest.java
tests/: conftest.py  test_engine.py  test_rules.py  test_scorer.py
