[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-sentinel"
version = "0.1.0"
description = "A prompt firewall for Claude and other LLMs — classifies, rewrites, or blocks risky prompts before they reach the model."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Amit Rangra" }]
requires-python = ">=3.11"
keywords = [
  "mcp",
  "llm",
  "safety",
  "prompt-injection",
  "ai-safety",
  "claude",
  "firewall",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
ai = [
  # Phase 2: Claude-backed second-pass classifier
  "anthropic>=0.40.0",
]
dev = [
  "anthropic>=0.40.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[project.scripts]
prompt-sentinel = "prompt_sentinel.server:main"

[project.urls]
Homepage = "https://github.com/amitrangra-labs/prompt-sentinel"
Repository = "https://github.com/amitrangra-labs/prompt-sentinel"
Issues = "https://github.com/amitrangra-labs/prompt-sentinel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_sentinel"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["prompt_sentinel"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
